
AC_INIT(Copyright.txt)

AC_PREFIX

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
libdir=$exec_prefix/lib
includedir=$prefix/include

AC_CHECK_PROG(found, [cmake], [yes], [no])
if test "${found}" = "no" ; then
  AC_ERROR([cmake is required for building VTK])
fi

cmake $srcdir \
	-DCMAKE_INSTALL_PREFIX:PATH=$prefix \
	-DBUILD_SHARED_LIBS:BOOL=ON \
	-DTCL_TCLSH:FILEPATH=$prefix/bin/tclsh \
	-DVTK_WRAP_TCL:BOOL=ON \
	-DCMAKE_BACKWARDS_COMPATIBILITY=2.2 \
	-DTCL_INCLUDE_PATH:PATH=$includedir \
	-DTCL_LIBRARY:FILEPATH=$libdir/libtcl8.4.so \
	-DTK_INCLUDE_PATH:PATH=$includedir \
	-DTK_LIBRARY:FILEPATH=$libdir/libtk8.4.so \
	-DVTK_USE_HYBRID:BOOL=ON;
