
AC_INIT(Copyright.txt)

AC_PREFIX

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
libdir=$exec_prefix/lib
includedir=$prefix/include
PATH=$exec_prefix/bin:$PATH

CMAKE=
AC_PATH_PROG(CMAKE, cmake)
if test "x${CMAKE}" = "x" ; then
  AC_ERROR([cmake is required for building VTK])
fi

$CMAKE $srcdir \
	-DCMAKE_INSTALL_PREFIX:PATH=$prefix \
	-DBUILD_SHARED_LIBS:BOOL=ON \
	-DTCL_TCLSH:FILEPATH=$prefix/bin/tclsh \
	-DVTK_WRAP_TCL:BOOL=ON \
	-DCMAKE_BACKWARDS_COMPATIBILITY=2.2 \
	-DTCL_INCLUDE_PATH:PATH=$includedir \
	-DTCL_LIBRARY:FILEPATH=$libdir/libtcl8.4.dylib \
	-DTK_INCLUDE_PATH:PATH=$includedir \
	-DTK_LIBRARY:FILEPATH=$libdir/libtk8.4.dylib \
	-DVTK_USE_HYBRID:BOOL=ON \
	-DOPENGL_INCLUDE_DIR:PATH=/usr/X11/include \
	-DOPENGL_gl_LIBRARY:FILEPATH=/usr/X11/lib/libGL.dylib \
	-DOPENGL_glu_LIBRARY:FILEPATH=/usr/X11/lib/libGLU.dylib \
	-DVTK_USE_X:BOOL=ON \
	-DVTK_USE_CARBON:BOOL=OFF \
	-DVTK_USE_COCOA:BOOL=OFF;
