AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(cf)
AC_PREFIX

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
libdir=$exec_prefix/lib
includedir=$prefix/include

AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_MKDIR_P
AC_PREFIX
AC_CANONICAL_SYSTEM

case $host_os in 
  *mingw* )
     makefile="Makefile:Makefile-cyg.in"
     ;;
  *Darwin* )
     makefile="Makefile:Makefile.in"
     ;;
  * ) 
     makefile="Makefile:Makefile.in"
     ;;
esac

zlib_dir=zlib-1.2.5
ZLIB_DIR=${zlib_dir}

if test -d "${zlib_dir}" ; then
  # Copy pymol from the srcdir and patch it with our server patch.
  rm -rf ${zlib_dir}
fi
tar -C $srcdir -clf - ${zlib_dir} | tar -xpf - 
(cd ${zlib_dir}; ./configure --prefix=${prefix})
AC_SUBST(ZLIB_DIR)
AC_OUTPUT($makefile)
