AC_INIT(configure.in)
AC_PREFIX

#------------------------------------------------------------------------
# Handle the --prefix=... option
#------------------------------------------------------------------------

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi
libdir=$exec_prefix/lib
includedir=$prefix/include

AC_PROG_INSTALL
AC_PROG_RANLIB

#pymol=pymol-1.00b19
pymol_version=3478
pymol_dir=pymol-exported-r${pymol_version}
pymol_server_patch=${srcdir}/pymol-exported-r${pymol_version}.patch
PYMOL_DIR=${pymol_dir}

if test -f "${pymol_server_patch}" ; then
  # Copy pymol from the srcdir and patch it with our server patch.
  rm -rf ${pymol_dir}
  tar -C $srcdir -clf - ${pymol_dir} | tar -xpf - 
  # Apply patches to original sources.
  (cd ${pymol_dir}; patch -p0) < ${pymol_server_patch}
  (cd ${pymol_dir}; ./configure --prefix=${prefix} --exec_prefix=$exec_prefix --enable-shared)
else
  AC_ERROR([can't find server patch file ${pymol_server_patch}])
fi
AC_SUBST(PYMOL_DIR)
AC_OUTPUT(Makefile)
